[package]
name = "juniper_relay"
description = "Adds support for the Relay specification to Juniper."
version = "0.0.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>", "Olga Gaponenko <ogaponenko3@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alvskar/juniper-relay"

[dependencies]
futures = "0.3.4"

juniper = { git = "https://github.com/graphql-rust/juniper", rev = "4647a32b" }
